<resources>
    <string name="app_name">Github Users</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="userimage">userimage</string>
    <string name="search_hint">Search</string>
    <string name="followers">followers</string>
    <string name="tab1">Followers</string>
    <string name="tab2">Following</string>
    <string name="following">following</string>
    <string name="company">company</string>
    <string name="repository">repository</string>
    <string name="botton_set">botton Set</string>
    <string name="n">n</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Back</string>
    <string name="find_your_stuff">Find your stuff.</string>
    <string name="favorite">Favorite</string>

</resources>
