<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:visibility="visible"
    card_view:cardBackgroundColor="@color/Git_sec"
    card_view:cardCornerRadius="2dp"
    card_view:cardUseCompatPadding="true"
    tools:visibility="visible">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/imgItemImg"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/userimage"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription,ImageContrastCheck"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvItemUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/imgItemImg"
            android:textColor="@color/Git_user1font"
            android:textColorHint="@color/Git_line"
            android:textSize="20sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/imgItemImg"
            card_view:layout_constraintTop_toTopOf="@+id/imgItemImg"
            tools:text="@string/username" />

        <TextView
            android:id="@+id/tvItemName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/Git_userfont"
            android:textSize="14sp"
            card_view:layout_constraintBottom_toBottomOf="@+id/imgItemImg"
            card_view:layout_constraintEnd_toEndOf="@+id/tvItemUser"
            card_view:layout_constraintStart_toStartOf="@+id/tvItemUser"
            card_view:layout_constraintTop_toBottomOf="@+id/tvItemUser"
            card_view:layout_constraintVertical_bias="0.0"
            tools:text="@string/name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>